--- a/Proyecto/app/src/main/AndroidManifest.xml
+++ b/Proyecto/app/src/main/AndroidManifest.xml
@@ -20,7 +20,7 @@
         </activity>
         <activity android:name=".Add" />
         <activity android:name=".EventosActivity" />
-        <activity android:name=".searchActivity"></activity>
+        <activity android:name=".searchActivity" />
     </application>
 
 </manifest>
